# ai-engin-v2

./: .gitignore  .pyre_configuration  Creating AI Engine V4.md  Initializing AetherCodec Repository Environment.md  QAU_GLOBAL_RELEASE.md  README.md  README_v4.md  aether_dashboard.html  codebase_analysis.md  colab_instructions.md  fix.md  instraction.txt  metadata.json  metadata_v4.json  pyproject.toml  qau_dashboard.html  requirements.txt  scratch.py  setup.py  sim_receiver.py  sim_sender.py  test_optimizations.py
doc/: api_reference.md  architecture.md  bandwidth_math.md  telecom_integration.md
peer_receiver/: __init__.py  aether_qau.py  demo_hd.py  hd_data.py  telecom_demo.py  train.py
peer_receiver/qau_qvs/fields/: quantum_fields.py
peer_sender/: data.py  model.py  p2p_sim.py
src/: curriculum_trainer.py  data.py  demo_hd.py  finetune_tpu.py  inference.py  inference_hybrid.py  latent_refine.py  mobile_decoder.py  model.py  pdox_packer.py  qau_cli.py  receiver_enhancer.py  train.py  train_hd.py  train_tpu.py
src/entropy/: range_coder.py
src/loss/: __init__.py  adversarial.py  entanglement.py  perceptual.py  rate_distortion.py
src/model/: __init__.py  aether_codec.py  analysis.py  attention.py  discriminator.py  hybrid_codec.py  hyperprior.py  quantizer.py  qvs_flow.py  rules.py  synthesis.py  tiler.py
src/p2p/: delta_codec.py  progressive_stream.py  shared_hyperprior.py
src/train/: __init__.py  dataset.py  stage1.py  stage2.py  stage3.py
src/utils/: ema.py  entropy_coder.py  hybrid_coder.py  metrics.py
tests/: test_qvs.py
(+7 files in other folders)
